# pi

./: .gitignore  CLAUDE.md  README.md  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: post-create.sh  post-start.sh
.devcontainer/toolchain/: rpi-aarch64.cmake  rpi-armv7.cmake
.github/: copilot-instructions.md
examples/c/: CMakeLists.txt  blink.c
examples/docker/: Dockerfile.arm
examples/node/: package.json  sensor-stream.js
examples/python/: blink.py  i2c_mock.py  sensor_sim.py
network/: .env  docker-compose.yml
network/base/: Dockerfile
network/gateway/: Dockerfile  api.py  main.py  store.py
network/hmi/: Dockerfile  api.py  main.py
network/hmi/static/: index.html
network/plc/: Dockerfile  io_table.py  logic.py  main.py
network/sensor-node/: Dockerfile  main.py  sensors.py
network/shared/: cyclonedds.xml  dds_types.py  discovery.py  messages.py  models.py  transport.py
scripts/: deploy-to-pi.sh
tests/: test_io_table.py  test_logic.py  test_messages.py  test_models.py  test_store.py
